--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 </head>
 <body>
     <h1>Revisão git01</h1>
+    <div id="logo">
+        <img src="./assets/imagens/git-github.jpg">
+    </div>
 </body>
 </html>
